--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@vitejs/plugin-vue": "^4.2.3",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vue-tsc": "^1.8.5"
